[package]
name = "match_engine_template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossbeam-channel = "0.5.15"
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
redis = { version = "1.2.3", optional = true}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[features]
default = ["redis-mq"]
redis-mq = ["dep:redis"]
kafka-mq = ["dep:rdkafka"]
